@@ -17,5 +17,5 @@
 #
 #       Author:  Vicent Mas - vmas@vitables.org
 
-__all__ = ['export_csv']
+__all__ = ['export_csv', 'import_csv']
 __path__ = ['vitables/plugins/csv']
